--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,32 +46,32 @@ jobs:
           name: web-app
           path: build/web/
 
-  build_windows:
-    name: Build Windows
-    runs-on: windows-latest
+  # build_windows:
+  #   name: Build Windows
+  #   runs-on: windows-latest
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v2
 
-      - name: Install Flutter
-        run: |
-          git clone https://github.com/flutter/flutter.git --depth 1 -b stable _flutter
+  #     - name: Install Flutter
+  #       run: |
+  #         git clone https://github.com/flutter/flutter.git --depth 1 -b stable _flutter
 
-      - name: Flutter Config
-        run: ${{ github.workspace }}\_flutter\bin\flutter.bat config --enable-windows-desktop
+  #     - name: Flutter Config
+  #       run: ${{ github.workspace }}\_flutter\bin\flutter.bat config --enable-windows-desktop
 
-      - name: Install Dependencies
-        run: ${{ github.workspace }}\_flutter\bin\flutter.bat pub get
+  #     - name: Install Dependencies
+  #       run: ${{ github.workspace }}\_flutter\bin\flutter.bat pub get
 
-      - name: Build Windows Executable
-        run: ${{ github.workspace }}\_flutter\bin\flutter.bat build windows
+  #     - name: Build Windows Executable
+  #       run: ${{ github.workspace }}\_flutter\bin\flutter.bat build windows
 
-      - name: Upload Windows Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: windows-app
-          path: build/windows/runner/Release/
+  #     - name: Upload Windows Artifact
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: windows-app
+  #         path: build/windows/runner/Release/
 
 
     #  build_ios:
